style.css
:root {
  font-size: 16px;
  font-family: 'Quicksand', sans-serif;
  --text-primary: #b6b6b6;
  --text-secondary: #ececec;
  --bg-primary: #23232e;
  --bg-secondary: #141418;
  --transition-speed: 600ms;
}

body {
  color: white;
  background-color: var(--bg-secondary);
  margin: 0;
  padding: 0;
}

.navbar {
  z-index: 99;
  overflow: hidden !important;
}

body::-webkit-scrollbar {
  width: 0.25rem;
}

body::-webkit-scrollbar-track {
  background: #1e1e24;
}

body::-webkit-scrollbar-thumb {
  background: #6649b8;
}

main {
  margin-left: 5rem;
  padding: 1rem;
}

.navbar {
  position: fixed;
  background-color: var(--bg-primary);
  transition: width 600ms ease;
  overflow: scroll;
}

.navbar-nav {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
}

.nav-item {
  width: 100%;
}

.nav-item:last-child {
  margin-top: auto;
}

.nav-link {
  display: flex;
  align-items: center;
  height: 5rem;
  color: var(--text-primary);
  text-decoration: none;
  filter: grayscale(100%) opacity(0.7);
  transition: var(--transition-speed);
  text-transform: uppercase;
  font-weight: bold;
}

.nav-link:hover {
  filter: grayscale(0%) opacity(1);
  background: var(--bg-secondary);
  color: var(--text-secondary);
}

.link-text {
  display: none;
  margin-left: 1rem;
}

.nav-link svg {
  width: 2rem;
  min-width: 2rem;
  margin: 0 1.5rem;
}

.fa-primary {
  color: #ff7eee;
}

.fa-secondary {
  color: #df49a6;
}

.fa-primary,
.fa-secondary {
  transition: var(--transition-speed);
}

.logo {
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 1rem;
  text-align: center;
  color: var(--text-secondary);
  background: var(--bg-secondary);
  font-size: 0.8rem;
  letter-spacing: 0.3ch;
  width: 100%;
}

.logo svg {
  transform: rotate(0deg);
  transition: var(--transition-speed);
}

.logo-text
{
  display: inline;
  position: absolute;
  left: -999px;
  transition: var(--transition-speed);
}

.navbar:hover .logo svg {
  transform: rotate(360deg);
}

.navicons {
  transform: rotate(0deg);
  transition: var(--transition-speed);
}

.navbar:hover .navicons {
  transform: rotate(-360deg);
}

/* Mobile Adaptive */

@media only screen and (max-width: 600px) {
  .navbar {
    bottom: 0;
    width: 100vw;
    height: 5rem;
  }

  .logo {
    display: none;
  }

  .navbar-nav {
    flex-direction: row;
  }

  .nav-link {
    justify-content: center;
  }

  main {
    margin: 0;
  }
}

/* Ultra Vertical Mobile Adaptive */

@media only screen and (max-width: 400px) {
  .nav-item:last-child {
    display: none;
  }
}

/* Desktop Adaptive */

@media only screen and (min-width: 600px) {
  .navbar {
    top: 0;
    width: 5rem;
    height: 100vh;
  }

  .navbar:hover {
    width: 17rem;
  }

  .navbar:hover .link-text {
    display: inline;
  }

  .navbar:hover .logo svg
  {
    margin-left: 13rem;
  }

  .navbar:hover .logo-text
  {
    left: 0px;
  }
}

.dark {
  --text-primary: #b6b6b6;
  --text-secondary: #ff7eee;
  --bg-primary: #23232e;
  --bg-secondary: #141418;
}

.light {
  --text-primary: #b6b6b6;
  --text-secondary: #ff7eee;
  --bg-primary: #23232e;
  --bg-secondary: #141418;
}

.solar {
  --text-primary: #b6b6b6;
  --text-secondary: #ff7eee;
  --bg-primary: #23232e;
  --bg-secondary: #141418;
}

.theme-icon {
  display: none;
}

.dark #darkIcon {
  display: block;
}

.light #lightIcon {
  display: block;
}

.solar #solarIcon {
  display: block;
}

/* Masonry Grid */

.container {
  position: relative;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto;
  grid-auto-flow: dense;
  grid-gap: 1vh;
}

.container .box {
  background: var(--bg-primary);
  margin: 0;
  padding: 1vh;
  display: grid;
  place-items: center;
  transition: var(--transition-speed);
}

.container .box:hover {
  background: #6649b8;
}

.container .box img {
  position: relative;
  width: 100%;
  object-fit: contain;
}

.container .box:nth-child(1) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(2) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(3) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(4) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(5) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(6) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(7) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(8) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(9) {
  grid-column: span 1;
  grid-row: span 1;
}

.container .box:nth-child(10) {
  grid-column: span 2;
  grid-row: span 1;
}

/* Mobile Adaptive */

@media screen and (max-width: 768px) {
  .container .box:nth-child(1) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(2) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(3) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(4) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(5) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(6) {
      grid-column: span 1;
      grid-row: span 1;
  }
  .container .box:nth-child(3) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(4) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(5) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(6) {
      grid-column: span 1;
      grid-row: span 1;
  }
  .container .box:nth-child(3) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(4) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(5) {
      grid-column: span 1;
      grid-row: span 1;
  }
  
  .container .box:nth-child(6) {
      grid-column: span 1;
      grid-row: span 1;
  }
  .container .box:nth-child(7) {
    grid-column: span 1;
    grid-row: span 1;
  }

.container .box:nth-child(8) {
    grid-column: span 1;
    grid-row: span 1;
  }

.container .box:nth-child(9) {
    grid-column: span 1;
    grid-row: span 1;
  }

.container .box:nth-child(10) {
    grid-column: span 1;
    grid-row: span 1;
  }
}

/* Vertical Adaptive Grid */

@media (orientation: portrait) {
    .container .box:nth-child(1) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(2) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(3) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(4) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(5) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(6) {
      grid-column: span 1;
      grid-row: span 1;
  }
  .container .box:nth-child(3) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(4) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(5) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(6) {
      grid-column: span 1;
      grid-row: span 1;
  }
  .container .box:nth-child(3) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(4) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(5) {
      grid-column: span 1;
      grid-row: span 1;
  }

  .container .box:nth-child(6) {
      grid-column: span 1;
      grid-row: span 1;
  }
  .container .box:nth-child(7) {
    grid-column: span 1;
    grid-row: span 1;
  }

  .container .box:nth-child(8) {
    grid-column: span 1;
    grid-row: span 1;
  }

  .container .box:nth-child(9) {
    grid-column: span 1;
    grid-row: span 1;
  }

  .container .box:nth-child(10) {
    grid-column: span 1;
    grid-row: span 1;
  }
}

